second edition with minor changes onabout page

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="seperator"></div>
         <div class = "right" >
             <p style="padding-inline-end: 20px; font-size: 40px; font-family: Arial, Helvetica, sans-serif; opacity: 50%;">About</p>
-            <p >Aspiring software engineering student with strong mindset and proven track record who is a a solid team player.</p>
+            <p >Aspiring software engineering student with strong mindset and proven track record who is a solid team player.</p>
             <p style="padding-top: 10px;">Skills I am proficient in:</p>    
             <table style="padding-top: 20pxpx;">
                 <tr>
